# bare-kit

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  build.gradle  overrides.cmake  pack  pack.c  package-lock.json  package.json  read  read.c  settings.gradle
.github/workflows/: integrate.yml  prebuild.yml  publish.yml  test.yml
android/: CMakeLists.txt  build.gradle
android/src/androidTest/java/to/holepunch/bare/kit/: WorkletTest.java
android/src/main/c/: CMakeLists.txt  Worklet.c
android/src/main/java/to/holepunch/bare/kit/: IPC.java  MessagingService.java  RPC.java  Worklet.java
android/src/main/java/to/holepunch/compact/: Decoder.java  Encoder.java
android/src/main/jni/: IPC.c  Worklet.c
apple/: CMakeLists.txt
apple/BareKit/: BareKit.h  BareKit.m  iOS.plist  macOS.plist
linux/: CMakeLists.txt
npm/: README.md  index.cjs  index.mjs  package-lock.json  package.json
patches/: bare-exit-drain.patch
prebuilds/: Makefile
shared/: CMakeLists.txt  builtins.json  events.c  events.h  ipc.c  ipc.h  platform.c  platform.h  suspension.h  worklet.c  worklet.h  worklet.js
shared/android/: events.c  ipc.c  ipc.h  suspension.c  suspension.h  worklet.c  worklet.h
shared/apple/: ipc.h  ipc.m  suspension.h  suspension.m
shared/linux/: ipc.c  ipc.h  suspension.h
shared/posix/: ipc.c  ipc.h
shared/win32/: ipc.c  ipc.h  suspension.h
shared/windows/: ipc.c  ipc.h  suspension.def  unistd.h  worklet.def
src/: worklet.c  worklet.h  worklet.js
src/apple/: CMakeLists.txt
src/apple/BareKit/: BareKit.h  BareKit.m
test/: CMakeLists.txt  worklet-assets.c
test/apple/: CMakeLists.txt  push.m  stress.m  worklet-ipc-eof.m  worklet-ipc-large-write.m  worklet-ipc.m  worklet-push-error.m  worklet.m
test/apple/ios/: CMakeLists.txt  Info.plist  worklet.m
test/apple/macos/: CMakeLists.txt  Info.plist  worklet.m
test/fixtures/: .gitignore  generate.js
test/ios/: CMakeLists.txt  Info.plist  codesign.entitlements  worklet.m
test/ios/extension/: CMakeLists.txt  Info.plist  NotificationService.h  NotificationService.m  NotificationServiceExtension.entitlements  push.js
test/linux/: CMakeLists.txt  segfault.c
test/shared/: CMakeLists.txt  common-worklet-ipc-large-write.c  common-worklet-ipc.c  common-worklet-ipc.h  worklet-assets.c  worklet-destroy-before-start.c  worklet-exit-eof.c  worklet-ipc-large-write.c  worklet-ipc.c  worklet-ipc.h  worklet-jsend-eof.c  worklet-self-exit.c  worklet-suspend-resume.c  worklet-terminate-after-suspend.c
test/shared/fixtures/: generate.js
win32/: CMakeLists.txt  ipc.def  worklet.def
windows/: CMakeLists.txt
